tests/fail/safety_double_mut.stderr
error[E0461]: Illegal use of permission suffixes (# or $) in everyday contexts. Modifiers are strictly limited to declarations or explicit mutable method calls.
 --> tests/fail/safety_double_mut.tk:16:17
   |
 16 |     auto &r1 = &x#
   |                 ^
error[E0461]: Illegal use of permission suffixes (# or $) in everyday contexts. Modifiers are strictly limited to declarations or explicit mutable method calls.
 --> tests/fail/safety_double_mut.tk:17:17
   |
 17 |     auto &r2 = &x# // Error: already borrowed
   |                 ^
error[E0431]: Control flow reaches end of non-void function 'main'
 --> tests/fail/safety_double_mut.tk:14:4
   |
 14 | fn main() -> i32 {
   |    ^
